--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ proguard/
 
 # Log Files
 *.log
+
+# Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
+.idea/workspace.xml
+.idea/tasks.xml
