--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ proguard/
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/libraries/
+.idea/dictionaries/
